--- a/src/app/routes/student-registration/student-registration.component.scss
+++ b/src/app/routes/student-registration/student-registration.component.scss
@@ -1,92 +1,111 @@
 .container {
-    width: 100%;
-    min-height: 100%;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  border-top: 1px solid lightgray;
+  background-color: lightgrey;
+    form {
+        width: 100%;
+        display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+        mat-card {
+            width: 80%;
+            min-height: 100px;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            border-radius: 20px;
+            margin-top: 10px;
+        
+                label {
+                    color: #ff7177;
+                    font-size: 25px;
+                    font-weight: 600;
+                    font-style: italic;
+                    margin-bottom: 20px;
+                }
+                .parent-div {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-content: space-between;
+                    width: 100%;
+                    div {
+                      width: 33.3%;
+                      margin: 10px;
+                      mat-form-field {
+                        width: 100%; 
+                      }
+                    }
+                  }
+            }
+    }
+    mat-card {
+    width: 80%;
+    min-height: 100px;
+    background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    border-top: 1px solid lightgray;
-    background-color: lightgrey;
-}
-form {
-    width: 100%;
-    display: flex;
-flex-direction: column;
-justify-content: start;
-align-items: center;
-}
-label {
-    color: #ff7177;
-    font-size: 25px;
-    font-weight: 600;
-    font-style: italic;
-    margin-bottom: 20px;
-    text-align: center;
-}
-    mat-card {
-        width: 80%;
-        min-height: 100px;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        border-radius: 20px;
-        margin-top: 10px;
+    justify-content: space-between;
+    border-radius: 20px;
+    margin-top: 10px;
+
+        label {
+            color: #ff7177;
+            font-size: 25px;
+            font-weight: 600;
+            font-style: italic;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .parent-div {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-content: space-between;
+            width: 100%;
+            div {
+              width: 33.3%;
+              margin: 10px;
+              mat-form-field {
+                width: 100%; 
+              }
+            }
+          }
     }
-.parent-div {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: space-between;
-    width: 100%;
 }
-.parent-div1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: space-between;
-    width: 100%;
-}
-.parent-div2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: space-between;
-    width: 100%;
-}
-.parent-div3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: space-between;
-    width: 100%;
-}
-.parent-div3 .mat-radio-button ~ .mat-radio-button {
-    margin-left: 16px;
+
+.btn-row {
+    margin: 10px;
+    float: end;
+    text-align: right;
+    button {
+      margin-left: 20px;
+      width: 150px;
+      border-radius: 100px;
+    }
   }
+  .primary {
+    background-image: linear-gradient(#f13737, #ff7177);
+    color: white;
+  }
+  .select {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: space-between;
+    width: 100%;
     div {
-      width: 50%;
+      width: 100%;
       margin: 10px;
-    }
-    .parent-div3 .one {
-        width: 100%;
-        margin: 10px;
-      }
       mat-form-field {
         width: 100%; 
       }
-      .btn-row {
-        margin: 10px;
-        float: end;
-        text-align: right;
-      }
-        button {
-          margin-left: 60px;
-          width: 150px;
-          border-radius: 100px;
-          text-align: center;
-        }
-        .primary {
-            background-image: linear-gradient(#f13737, #ff7177);
-            color: white;
-          }
+    }
+  }
